# vectra

./: Cargo.toml  README.md
examples/: array_creation.rs  array_operations.rs  broadcasting.rs  debug_test.rs  demo.rs  display_test.rs  dot_product_test.rs  logarithmic.rs  math_operations.rs  matmul.rs  ml_operations.rs  permute_test.rs  random_arrays.rs  slicing_operations.rs  statistical_operations.rs  trigonometric.rs  truncated_svd_test.rs
src/: core.rs  lib.rs  math.rs  ops.rs  random.rs  slice.rs  tests.rs  utils.rs
src/math/: mod.rs
src/math/matmul/: float_mat.rs  mod.rs
src/math/ml/: mod.rs
src/math/stat/: mod.rs  order.rs  summary.rs
