[package]
name = "vectra"
version = "0.1.2"
edition = "2024"
authors = ["passchaos <greedwolf.dss@gmail.com>"]
description = "A multi-dimensional array library for Rust, similar to NumPy"
license = "MIT"
keywords = ["array", "matrix", "numpy", "ndarray", "math"]
categories = ["mathematics", "science"]
repository = "https://github.com/passchaos/vectra"

[dependencies]
rand = "0.9.2"
rand_distr = "0.5.1"
num-traits = "0.2.19"
approx = "0.5.1"

[dev-dependencies]
plotiron = { path = "../plotiron" }

[profile.dev]
opt-level = 3
