[package]
name = "vectra"
version = "0.1.2"
edition = "2024"
authors = ["passchaos <greedwolf.dss@gmail.com>"]
description = "A multi-dimensional array library for Rust, similar to NumPy"
license = "MIT"
keywords = ["array", "matrix", "numpy", "ndarray", "math"]
categories = ["mathematics", "science"]
repository = "https://github.com/passchaos/vectra"

[dependencies]
rand = "0.9.2"
rand_distr = "0.5.1"
num-traits = "0.2.19"
approx = "0.5.1"
# faer = "0.23"
faer = { git = "https://github.com/passchaos/faer-rs"}
itertools = "0.14.0"
blas-src = { version = "*", optional = true }
cblas-sys = { version = "*", optional = true }
blas-sys = { version = "*", optional = true }

[target.'cfg(target_os = "linux")'.dependencies.blas-src]
version = "*"
features = ["openblas"]
optional = true

[target.'cfg(target_os = "macos")'.dependencies.blas-src]
version = "*"
features = ["accelerate"]
optional = true

[dev-dependencies]
plotiron = { git = "https://github.com/passchaos/plotiron" }
ndarray = "0.16.1"

[features]
default = ["blas"]
blas = ["blas-sys", "cblas-sys", "blas-src"]

[profile.release]
opt-level = 3
overflow-checks = false
codegen-units = 1
panic = "abort"
lto = "fat"
