[package]
name = "vectra"
version = "0.2.4"
edition = "2024"
authors = ["passchaos <greedwolf.dss@gmail.com>"]
description = "A multi-dimensional array library for Rust, similar to NumPy"
license = "MIT"
keywords = ["array", "matrix", "numpy", "ndarray", "math"]
categories = ["mathematics", "science"]
repository = "https://github.com/passchaos/vectra"
documentation = "https://docs.rs/vectra"

[dependencies]
rand = "0.9.2"
rand_distr = "0.5.1"
num-traits = "0.2.19"
approx = "0.5.1"
# faer = "0.23"
itertools = "0.14.0"
cblas-sys = { version = "0.3", optional = true }
blas-sys = { version = "0.9", optional = true }

[target.'cfg(not(target_os = "macos"))'.dependencies.openblas-src]
version = "0.10.13"
features = ["system"]
optional = true

[target.'cfg(not(target_os = "macos"))'.dependencies.blas-src]
version = "0.14.0"
features = ["openblas"]
optional = true

[target.'cfg(target_os = "macos")'.dependencies.blas-src]
version = "0.14.0"
features = ["accelerate"]
optional = true

[dev-dependencies]
plotiron = { git = "https://github.com/passchaos/plotiron" }
ndarray = "0.16.1"

[features]
default = ["blas"]
blas = ["blas-sys", "cblas-sys", "blas-src"]

[profile.release]
opt-level = 3
overflow-checks = false
codegen-units = 1
panic = "abort"
lto = "fat"
